Fixed z-index of chat_room

--- a/VinVC/video/static/video/css/player.css
+++ b/VinVC/video/static/video/css/player.css
@@ -32,4 +32,5 @@ html, body {
     position: relative;
     float: right;
     flex-grow: 1;
+    z-index: -1;
 }
